--- a/_config.yml
+++ b/_config.yml
@@ -1,195 +1,14 @@
 # --- Basic options --- #
 
 title: Roller
+title_url: https://chaaz.github.io/roller
 description: Characters and Code
 author: Charlie Ozinga
+show_downloads: false
+show_view_on_github: false
 
-navbar-links:
-  About Me: "Just another fan"
-  # Resources:
-  #   - Beautiful Jekyll: "https://beautifuljekyll.com"
-  #   - D&D Beyond: "https://dndbeyond.com"
-  # Author's home: "https://myhomepage.com/here"
-
-# avatar: "/assets/img/avatar-icon.png"
-# round-avatar: true
-
-# image in the top-left corner instead of title text
-# title-img: "/path/to/image"
-
-# --- Footer options --- #
-
-social-network-links:
-  email: "ozchaz@gmail.com"
-  # facebook: notausername
-  github: chaaz
-  # twitter: what
-  # rss: true
-  # reddit: username
-  # linkedin: username
-  # xing: username
-  # stackoverflow: "12345/name"
-  # snapchat: username
-  # instagram: username
-  # youtube: user/username
-  # spotify: username
-  # telephone: +13038085668
-  # steam: username
-  # twitch: username
-  # yelp: username
-  # telegram: username
-  # calendly: username
-
-# --- General options --- #
-
-share-links-active:
-  twitter: false
-  facebook: false
-  linkedin: false
-
-# share a link to your webset in the footer
-# url-pretty: "mywebsite.com"
-
-# Create a "tags" index page and makes tags on each post clickable
-link-tags: false
-
-# Truncate excerpts to number of words on the index page
-excerpt_length: 50
-
-# Personalize the colors in your website. Colour values can be any valid
-# CSS colour
-
-# navbar-col: "#F5F5F5"
-# navbar-text-col: "#404040"
-# navbar-border-col: "#EAEAEA"
-# page-col: "#FFFFFF"
-# link-col: "#008AFF"
-# hover-col: "#0085A1"
-# footer-col: "#F5F5F5"
-# footer-text-col: "#777777"
-# footer-link-col: "#404040"
-
-# Alternatively, the navbar, footer, and page background can be set to
-# use background images instead of colour
-
-# navbar-img: "/assets/img/bgimage.png"
-# footer-img: "/assets/img/bgimage.png"
-# page-img: "/assets/img/bgimage.png"
-
-# --- Web Statistics Section --- #
-
-# Fill in your Google Analytics gtag.js ID to track your website using
-# gtag
-#gtag: ""
-
-# Fill in your Google Analytics ID to track your website using GA
-#google_analytics: ""
-
-# Google Tag Manager ID
-#gtm: ""
-
-# Matomo (aka Piwik) Web statistics
-# Uncomment the following section to enable Matomo. The opt-out
-# parameter controls whether or not you want to allow users to opt out
-# of tracking.
-#matomo:
-#  site_id: "9"
-#  uri: "demo.wiki.pro"
-#  opt-out: true
-
-# --- Comments --- #
-
-# To use Disqus comments, sign up to https://disqus.com and fill in your
-# Disqus shortname (NOT the userid)
-#disqus: ""
-
-# To use Facebook Comments, create a Facebook app and fill in the
-# Facebook App ID
-#fb_comment_id: ""
-
-# To use Utterances comments: (0) uncomment the following section, (1)
-# fill in "repository" (make sure the repository is public), (2) Enable
-# Issues in your repository, (3) Install the Utterances app in your
-# repository https://github.com/apps/utterances See more details about
-# the parameters below at https://utteranc.es/
-#utterances:
-#  repository: # GitHub username/repository eg. "daattali/beautiful-jekyll"
-#  issue-term: title   # Mapping between blog posts and GitHub issues
-#  theme: github-light # Utterances theme
-#  label: blog-comments # Label that will be assigned to GitHub Issues created by Utterances
-
-# To use Staticman comments, first invite `staticmanlab` as a
-# collaborator to your repository and accept the invitation by going to
-# `https://staticman3.herokuapp.com/v3/connect/github/<username>/<repo-name>`.
-# Then uncomment the following section and fill in "repository",
-# "branch", and "endpoint". If you want to use reCaptcha for staticman
-# (optional for spam protection), then fill in the "siteKey" and
-# "secret" parameters below and also in `staticman.yml`. See more
-# details at https://staticman.net/
-#staticman:
-#  repository : # GitHub username/repository eg. "daattali/beautiful-jekyll"
-#  branch     : master # If you're not using `master` branch, then you also need to update the `branch` parameter in `staticman.yml`
-#  endpoint   : # URL of your own deployment, with a trailing slash (will fallback to a public GitLab instance) eg. https://<your-api>/v3/entry/github/
-#  reCaptcha:
-#    siteKey  : # Use your own site key, you need to apply for one on Google
-#    secret   : # ENCRYPT your password by going to https://staticman3.herokuapp.com/v3/encrypt/<your-site-secret>
-
-# --- Misc --- #
-
-# Character used to separate site title and description in HTML document
-# title and RSS feed title
-title-separator: "-"
-
-# Ruby Date Format to show dates of posts
-date_format: "%B %-d, %Y"
-
-# Facebook App ID
-#fb_app_id: ""
-
-# --- You don't need to touch anything below here --- #
-# --- (but you can if you want) --- #
-
-# Output options (more information on Jekyll's site)
-timezone: "America/Denver"
-# markdown: kramdown
-# highlighter: rouge
-# permalink: /:year-:month-:day-:title/
-# paginate: 5
-
-# kramdown:
-#   input: GFM
-
-# Default YAML values (more information on Jekyll's site)
-# defaults:
-#   -
-#     scope:
-#       path: ""
-#       type: "posts"
-#     values:
-#       layout: "post"
-#       comments: true  # add comments to all blog posts
-#       social-share: true # add social media sharing buttons to all blog posts
-#       readtime: false # add estimated reading time on all blog posts
-#   -
-#     scope:
-#       path: "" # all files
-#     values:
-#       layout: "page"
-#       show-avatar: true
-
-# Exclude these files from production site
-exclude:
-  - CHANGELOG.md
-  - CNAME
-  - Gemfile
-  - Gemfile.lock
-  - LICENSE
-  - README.md
-  - screenshot.png
-  - docs/
-
-# plugins:
-#   - jekyll-paginate
-#   - jekyll-sitemap
+github:
+  is_project_page: false
+  is_user_page: false
 
 theme: jekyll-theme-dinky
